# taller-desarrollo-gnome-flisol

./: meson.build
src/: App.vala  Window.vala
src/Widgets/: TodoRow.vala
